[workspace]
members = [
    "node",
    "pallets/*",
    "runtime",
    "bellman-verifier",
    "snarkjs-bellman-adapter/verify",
]
[workspace.package]
edition = "2021"
#rust-version = "1.65"
repository = "https://github.com/codecuisine/zipplepie"
license = "GPL-3"
categories = ["cryptography::cryptocurrencies"]

[profile.release]
panic = "unwind"
